# AutoDS

./: .gitignore  main.py  pyproject.toml
inputs/: loan_data.csv
src/agents/: coder_agent.py  debugger_agent.py  ds_agent.py
src/core/: code_executor.py  orchestrator.py  profiler.py  state_manager.py
